<resources>
    <string name="app_name">Registration App</string>
    <string name="registerForm">Registration Form </string>
    <string name="Welcome">Welcome to Adventure Learning Club!</string>
    <string name="fullName">Full Name</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="studentId">Student ID </string>
    <string name="school">School</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>

</resources>